force-app/main/default/objects/Case/fields/FS_1erCostoAprobado__c.field-meta.xml
<CustomField>
    <fullName>FS_1erCostoAprobado__c</fullName>
    <formula>LEN(TEXT(FS_FechaAprobacion1erCosto__c)) &gt; 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1er Costo Aprobado</label>
    <type>Checkbox</type>
</CustomField>