force-app/main/default/objects/Case/fields/FS_Acepta1erCosto__c.field-meta.xml
<CustomField>
    <fullName>FS_Acepta1erCosto__c</fullName>
    <label>Acepta 1er Costo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FS_ValoresSiNo</valueSetName>
    </valueSet>
</CustomField>