force-app/main/default/objects/Case/fields/FS_AceptaPaseProducion__c.field-meta.xml
<CustomField>
    <fullName>FS_AceptaPaseProducion__c</fullName>
    <label>Acepta Pase a Producción</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FS_ValoresSiNo</valueSetName>
    </valueSet>
</CustomField>