force-app/main/default/objects/Case/fields/FS_AgenteN2__c.field-meta.xml
<CustomField>
    <fullName>FS_AgenteN2__c</fullName>
    <label>Agente N2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>