force-app/main/default/objects/Case/fields/FS_AgenteQA__c.field-meta.xml
<CustomField>
    <fullName>FS_AgenteQA__c</fullName>
    <label>Agente QA</label>
    <length>18</length>
    <type>Text</type>
</CustomField>