force-app/main/default/objects/Case/fields/FS_Aplica_Licencia_Recurrente__c.field-meta.xml
<CustomField>
    <fullName>FS_Aplica_Licencia_Recurrente__c</fullName>
    <label>¿Aplica Licencia Recurrente?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>