force-app/main/default/objects/Case/fields/FS_AprobacionCertificacionParcheQA__c.field-meta.xml
<CustomField>
    <fullName>FS_AprobacionCertificacionParcheQA__c</fullName>
    <label>Aprobación Certificación Parche QA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FS_ValoresSiNo</valueSetName>
    </valueSet>
</CustomField>