force-app/main/default/objects/Case/fields/FS_AprobacionInstalacionParcheRelease__c.field-meta.xml
<CustomField>
    <fullName>FS_AprobacionInstalacionParcheRelease__c</fullName>
    <label>Aprobación Instalación Parche - Release</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FS_ValoresSiNo</valueSetName>
    </valueSet>
</CustomField>