force-app/main/default/objects/Case/fields/FS_AprobacionPlanPruebas__c.field-meta.xml
<CustomField>
    <fullName>FS_AprobacionPlanPruebas__c</fullName>
    <label>Aprobación Plan de Pruebas?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FS_ValoresSiNo</valueSetName>
    </valueSet>
</CustomField>