force-app/main/default/objects/Case/fields/FS_AprobacionSolucionDefinitivaN2__c.field-meta.xml
<CustomField>
    <fullName>FS_AprobacionSolucionDefinitivaN2__c</fullName>
    <label>Aprobación Solución Definitiva N2?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FS_ValoresSiNo</valueSetName>
    </valueSet>
</CustomField>