force-app/main/default/objects/Case/fields/FS_AprobacionSolucionIPRelease__c.field-meta.xml
<CustomField>
    <fullName>FS_AprobacionSolucionIPRelease__c</fullName>
    <label>Aprobación de Solución IP-Release?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FS_ValoresSiNo</valueSetName>
    </valueSet>
</CustomField>