force-app/main/default/objects/Case/fields/FS_AprobadorActual__c.field-meta.xml
<CustomField>
    <fullName>FS_AprobadorActual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprobador Actual</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos8</relationshipName>
    <type>Lookup</type>
</CustomField>