force-app/main/default/objects/Case/fields/FS_Calificacion__c.field-meta.xml
<CustomField>
    <fullName>FS_Calificacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calificación</label>
    <type>Checkbox</type>
</CustomField>