force-app/main/default/objects/Case/fields/FS_Carterizacion__c.field-meta.xml
<CustomField>
    <fullName>FS_Carterizacion__c</fullName>
    <label>Carterización</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FS_Carterizacion</valueSetName>
    </valueSet>
</CustomField>