force-app/main/default/objects/Case/fields/FS_CasoRQOrigenNovedad__c.field-meta.xml
<CustomField>
    <fullName>FS_CasoRQOrigenNovedad__c</fullName>
    <label>Caso/RQ origen de novedad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>