force-app/main/default/objects/Case/fields/FS_ComentarioMotivoNoInstalacionParche__c.field-meta.xml
<CustomField>
    <fullName>FS_ComentarioMotivoNoInstalacionParche__c</fullName>
    <inlineHelpText>Comentarios de Motivos de NO instalación de Parche</inlineHelpText>
    <label>Comentario Motivos de NO instalación</label>
    <type>TextArea</type>
</CustomField>