force-app/main/default/objects/Case/fields/FS_ComentariosEncuesta__c.field-meta.xml
<CustomField>
    <fullName>FS_ComentariosEncuesta__c</fullName>
    <label>Comentarios Encuesta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>