force-app/main/default/objects/Case/fields/FS_ComentariosRechazoSolucion__c.field-meta.xml
<CustomField>
    <fullName>FS_ComentariosRechazoSolucion__c</fullName>
    <label>Comentarios Rechazo Solución</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>