force-app/main/default/objects/Case/fields/FS_ComentariosRespuesta__c.field-meta.xml
<CustomField>
    <fullName>FS_ComentariosRespuesta__c</fullName>
    <label>Comentarios Respuesta</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>