force-app/main/default/objects/Case/fields/FS_Compromisos_internos__c.field-meta.xml
<CustomField>
    <fullName>FS_Compromisos_internos__c</fullName>
    <label>Compromisos internos</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>