force-app/main/default/objects/Case/fields/FS_Correos_Notificaciones_PS__c.field-meta.xml
<CustomField>
    <fullName>FS_Correos_Notificaciones_PS__c</fullName>
    <label>Correos Notificaciones PS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>