force-app/main/default/objects/Case/fields/FS_CorreosNotificacionesServicios__c.field-meta.xml
<CustomField>
    <fullName>FS_CorreosNotificacionesServicios__c</fullName>
    <label>Correos Notificaciones Servicios</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>