force-app/main/default/objects/Case/fields/FS_CSATCaso__c.field-meta.xml
<CustomField>
    <fullName>FS_CSATCaso__c</fullName>
    <label>CSAT del Caso</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>