force-app/main/default/objects/Case/fields/FS_Cuando_Aplica_LR__c.field-meta.xml
<CustomField>
    <fullName>FS_Cuando_Aplica_LR__c</fullName>
    <label>¿Cuándo Aplica LR?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entrega de Solución</fullName>
            </value>
            <value>
                <fullName>Pase de Producción</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>