force-app/main/default/objects/Case/fields/FS_DescripcionCliente__c.field-meta.xml
<CustomField>
    <fullName>FS_DescripcionCliente__c</fullName>
    <label>Descripción Cliente</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>