force-app/main/default/objects/Case/fields/FS_Dias_Aprobados__c.field-meta.xml
<CustomField>
    <fullName>FS_Dias_Aprobados__c</fullName>
    <label>Días Aprobados</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>