force-app/main/default/objects/Case/fields/FS_Dias_que_Aplica_LR__c.field-meta.xml
<CustomField>
    <fullName>FS_Dias_que_Aplica_LR__c</fullName>
    <label>Días que Aplica LR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>