force-app/main/default/objects/Case/fields/FS_EncuestaEnviada__c.field-meta.xml
<CustomField>
    <fullName>FS_EncuestaEnviada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Encuesta Enviada?</label>
    <type>Checkbox</type>
</CustomField>