force-app/main/default/objects/Case/fields/FS_EnviarAprobacionDisenioTecnico__c.field-meta.xml
<CustomField>
    <fullName>FS_EnviarAprobacionDisenioTecnico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar a Aprobación de Diseño Técnico</label>
    <type>Checkbox</type>
</CustomField>