force-app/main/default/objects/Case/fields/FS_EnviarAprobacionPlanPruebas__c.field-meta.xml
<CustomField>
    <fullName>FS_EnviarAprobacionPlanPruebas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar a Aprobación Plan de Pruebas</label>
    <type>Checkbox</type>
</CustomField>