force-app/main/default/objects/Case/fields/FS_EnviarAprobacionSolucionDN2__c.field-meta.xml
<CustomField>
    <fullName>FS_EnviarAprobacionSolucionDN2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar a Aprobación de Solución D-N2</label>
    <type>Checkbox</type>
</CustomField>