force-app/main/default/objects/Case/fields/FS_EnviarAprobacionSolucionIPN2__c.field-meta.xml
<CustomField>
    <fullName>FS_EnviarAprobacionSolucionIPN2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar a Aprobación Solución IP-N2</label>
    <type>Checkbox</type>
</CustomField>