force-app/main/default/objects/Case/fields/FS_Es_cliente__c.field-meta.xml
<CustomField>
    <fullName>FS_Es_cliente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es cliente?</label>
    <type>Checkbox</type>
</CustomField>