force-app/main/default/objects/Case/fields/FS_Estado__c.field-meta.xml
<CustomField>
    <fullName>FS_Estado__c</fullName>
    <description>Campo para mostrar el estado en la comunidad.</description>
    <formula>IF(ISPICKVAL(FS_SubEstado__c, &apos;En Espera de Respuesta del Cliente&apos;), &apos;Pendiente Respuesta Cliente&apos;, TEXT(Status))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Campo para mostrar el estado en la comunidad.</inlineHelpText>
    <label>Estado</label>
    <type>Text</type>
</CustomField>