force-app/main/default/objects/Case/fields/FS_Fecha_Aprobacion_PE__c.field-meta.xml
<CustomField>
    <fullName>FS_Fecha_Aprobacion_PE__c</fullName>
    <description>Fecha de aprobación de propuesta económica.</description>
    <inlineHelpText>Fecha de aprobación de propuesta económica.</inlineHelpText>
    <label>Fecha Aprobación PE</label>
    <type>DateTime</type>
</CustomField>