force-app/main/default/objects/Case/fields/FS_Fecha_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>FS_Fecha_de_entrega__c</fullName>
    <label>Fecha de entrega</label>
    <type>Date</type>
</CustomField>