force-app/main/default/objects/Case/fields/FS_Fecha_Entrega_Cliente__c.field-meta.xml
<CustomField>
    <fullName>FS_Fecha_Entrega_Cliente__c</fullName>
    <label>Fecha Entrega Cliente</label>
    <type>DateTime</type>
</CustomField>