force-app/main/default/objects/Case/fields/FS_Fecha_Entrega_de_Parche__c.field-meta.xml
<CustomField>
    <fullName>FS_Fecha_Entrega_de_Parche__c</fullName>
    <label>Fecha Entrega de Parche</label>
    <type>DateTime</type>
</CustomField>