force-app/main/default/objects/Case/fields/FS_Fecha_Entrega_de_Propuesta_Economica__c.field-meta.xml
<CustomField>
    <fullName>FS_Fecha_Entrega_de_Propuesta_Economica__c</fullName>
    <label>Fecha de Entrega de Propuesta Económica</label>
    <type>DateTime</type>
</CustomField>