force-app/main/default/objects/Case/fields/FS_Fecha_Puesta_en_Produccion__c.field-meta.xml
<CustomField>
    <fullName>FS_Fecha_Puesta_en_Produccion__c</fullName>
    <label>Fecha Puesta en Producción</label>
    <type>Date</type>
</CustomField>