force-app/main/default/objects/Case/fields/FS_FechaAprobacion1erCosto__c.field-meta.xml
<CustomField>
    <fullName>FS_FechaAprobacion1erCosto__c</fullName>
    <label>Fecha Aprobación 1er Costo</label>
    <type>DateTime</type>
</CustomField>