force-app/main/default/objects/Case/fields/FS_FechaContestacionEncuesta__c.field-meta.xml
<CustomField>
    <fullName>FS_FechaContestacionEncuesta__c</fullName>
    <label>Fecha Contestación Encuesta</label>
    <type>DateTime</type>
</CustomField>