force-app/main/default/objects/Case/fields/FS_FechaEnvioEncuesta__c.field-meta.xml
<CustomField>
    <fullName>FS_FechaEnvioEncuesta__c</fullName>
    <label>Fecha de Envío Encuesta</label>
    <type>DateTime</type>
</CustomField>