force-app/main/default/objects/Case/fields/FS_FechaEstadoActual__c.field-meta.xml
<CustomField>
    <fullName>FS_FechaEstadoActual__c</fullName>
    <label>Fecha Estado Actual</label>
    <type>DateTime</type>
</CustomField>