force-app/main/default/objects/Case/fields/FS_FechaSubEstadoActual__c.field-meta.xml
<CustomField>
    <fullName>FS_FechaSubEstadoActual__c</fullName>
    <label>Fecha Sub Estado Actual</label>
    <type>DateTime</type>
</CustomField>