force-app/main/default/objects/Case/fields/FS_Finalizar_Atencion__c.field-meta.xml
<CustomField>
    <fullName>FS_Finalizar_Atencion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finalizar Atención</label>
    <type>Checkbox</type>
</CustomField>