force-app/main/default/objects/Case/fields/FS_InformacionCompleta__c.field-meta.xml
<CustomField>
    <fullName>FS_InformacionCompleta__c</fullName>
    <label>Información Completa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
                <default>true</default>
                <label>Si</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>