force-app/main/default/objects/Case/fields/FS_IngenieroProducto__c.field-meta.xml
<CustomField>
    <fullName>FS_IngenieroProducto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ingeniero de Producto</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos6</relationshipName>
    <type>Lookup</type>
</CustomField>