force-app/main/default/objects/Case/fields/FS_IngenieroProductoQA__c.field-meta.xml
<CustomField>
    <fullName>FS_IngenieroProductoQA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ingeniero de Producto QA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos7</relationshipName>
    <type>Lookup</type>
</CustomField>