force-app/main/default/objects/Case/fields/FS_Modulo__c.field-meta.xml
<CustomField>
    <fullName>FS_Modulo__c</fullName>
    <label>Módulo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Producto__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Núcleo del Sistema</fullName>
            </value>
            <value>
                <fullName>Cajas y Bóveda (Módulo 3)</fullName>
            </value>
            <value>
                <fullName>Captaciones a la Vista (Módulo 4)</fullName>
            </value>
            <value>
                <fullName>Captaciones a Plazo (Módulo 5)</fullName>
            </value>
            <value>
                <fullName>Colocaciones (Módulo 6)</fullName>
            </value>
            <value>
                <fullName>Comercio Exterior (Módulo 10)</fullName>
            </value>
            <value>
                <fullName>Tesorería (Módulo 12)</fullName>
            </value>
            <value>
                <fullName>Tarjeta de Débito (Módulo 15)</fullName>
            </value>
            <value>
                <fullName>DIPS (Modulo 19)</fullName>
            </value>
            <value>
                <fullName>Contabilidad (Módulo 20)</fullName>
            </value>
            <value>
                <fullName>Reportes (Módulo 21)</fullName>
            </value>
            <value>
                <fullName>Garantías (Módulo 28)</fullName>
            </value>
            <value>
                <fullName>Calendarizador Procesos Bach</fullName>
            </value>
            <value>
                <fullName>Core Tarjeta de Crédito</fullName>
            </value>
            <value>
                <fullName>MCM (MultiChannel Managemt)</fullName>
            </value>
            <value>
                <fullName>Business Application Generator</fullName>
            </value>
            <value>
                <fullName>Business Support Aplication</fullName>
            </value>
            <value>
                <fullName>BRE (Motor de reglas)</fullName>
            </value>
            <value>
                <fullName>Business Application Products (Plataforma de Ventas)</fullName>
            </value>
            <value>
                <fullName>BackOffice</fullName>
            </value>
            <value>
                <fullName>Online Banking Personas</fullName>
            </value>
            <value>
                <fullName>Mobile Banking Personas</fullName>
            </value>
            <value>
                <fullName>Kioskos</fullName>
            </value>
            <value>
                <fullName>Enterprise Banking</fullName>
            </value>
            <value>
                <fullName>Rapid Cash</fullName>
            </value>
            <value>
                <fullName>DIPS</fullName>
            </value>
            <value>
                <fullName>ECCO</fullName>
            </value>
            <value>
                <fullName>IMS</fullName>
            </value>
            <value>
                <fullName>Flujos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>