force-app/main/default/objects/Case/fields/FS_MotivoCambioFechaDesarrollo__c.field-meta.xml
<CustomField>
    <fullName>FS_MotivoCambioFechaDesarrollo__c</fullName>
    <label>Motivo cambio de fecha del desarrollo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cambio de prioridad solicitada por el cliente</fullName>
            </value>
            <value>
                <fullName>Problema en ambientes</fullName>
            </value>
            <value>
                <fullName>Cambio de prioridad interna</fullName>
            </value>
            <value>
                <fullName>Dependencia de versionamiento</fullName>
            </value>
            <value>
                <fullName>Cambio de alcance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>