force-app/main/default/objects/Case/fields/FS_MotivoCambioFechaEntrega__c.field-meta.xml
<CustomField>
    <fullName>FS_MotivoCambioFechaEntrega__c</fullName>
    <label>Motivo de Cambio de Fecha Entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cambio de prioridad</fullName>
            </value>
            <value>
                <fullName>Dependencia de versionamiento</fullName>
            </value>
            <value>
                <fullName>Cambio de alcance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>