force-app/main/default/objects/Case/fields/FS_MotivoRechazo__c.field-meta.xml
<CustomField>
    <fullName>FS_MotivoRechazo__c</fullName>
    <label>Motivo de Rechazo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error en la entrega</fullName>
            </value>
            <value>
                <fullName>No resolvió lo reportado</fullName>
            </value>
            <value>
                <fullName>Entrega incompleta</fullName>
            </value>
            <value>
                <fullName>Complemento o alcance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>