force-app/main/default/objects/Case/fields/FS_MotivoRechazoEntregaParche__c.field-meta.xml
<CustomField>
    <fullName>FS_MotivoRechazoEntregaParche__c</fullName>
    <label>Motivos rechazo entrega de parche</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_AprobacionCertificacionParcheQA__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cambio en fecha de entrega</fullName>
            </value>
            <value>
                <fullName>Release plan</fullName>
            </value>
            <value>
                <fullName>Bloqueo por dependencia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>