force-app/main/default/objects/Case/fields/FS_MotivosRechazoCertificacion__c.field-meta.xml
<CustomField>
    <fullName>FS_MotivosRechazoCertificacion__c</fullName>
    <label>Motivos de rechazo certificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No autorizar pruebas FQC</fullName>
            </value>
            <value>
                <fullName>Cambio plan de pruebas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>