force-app/main/default/objects/Case/fields/FS_MotivosRechazoDT__c.field-meta.xml
<CustomField>
    <fullName>FS_MotivosRechazoDT__c</fullName>
    <label>Motivo de Rechazo por DT</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_AprobacionDisenioTecnico__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desarrollo incompleto</fullName>
            </value>
            <value>
                <fullName>Desarrollo erróneo</fullName>
            </value>
            <value>
                <fullName>Documentación incompleta</fullName>
            </value>
            <value>
                <fullName>Error en documentación</fullName>
            </value>
            <value>
                <fullName>Inconsistencia objetos</fullName>
            </value>
            <value>
                <fullName>Inconsistencia en proyecto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>