force-app/main/default/objects/Case/fields/FS_MotivosRechazoInstalacionParche__c.field-meta.xml
<CustomField>
    <fullName>FS_MotivosRechazoInstalacionParche__c</fullName>
    <inlineHelpText>Motivos de rechazo instalación de parche Release</inlineHelpText>
    <label>Motivos de Rechazo Instalación de parche</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error en compilación</fullName>
            </value>
            <value>
                <fullName>Error en scripts</fullName>
            </value>
            <value>
                <fullName>Error en levantar el ambiente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>