force-app/main/default/objects/Case/fields/FS_NombreContacto__c.field-meta.xml
<CustomField>
    <fullName>FS_NombreContacto__c</fullName>
    <formula>Contact.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Contacto</label>
    <type>Text</type>
</CustomField>